--- a/ClubCloud.Zimbra/ClubCloud.Zimbra.csproj
+++ b/ClubCloud.Zimbra/ClubCloud.Zimbra.csproj
@@ -40,8 +40,11 @@
     <AssemblyOriginatorKeyFile>ClubCloud.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.SharePoint, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SharePoint.Security, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
@@ -115,6 +118,12 @@
     <Compile Include="Global\userAgent.cs" />
     <Compile Include="Global\versionInfo.cs" />
     <Compile Include="Global\zimletInfo.cs" />
+    <Compile Include="LDAP\ZimbraAttribute.cs" />
+    <Compile Include="LDAP\ZimbraClaimProvider.cs" />
+    <Compile Include="LDAP\ZimbraClaimProviderFeatureReceiver.cs" />
+    <Compile Include="LDAP\ZimbraConfig.cs" />
+    <Compile Include="LDAP\ZimbraConsolidatedResult.cs" />
+    <Compile Include="LDAP\ZimbraPropertiesComparer.cs" />
     <Compile Include="Mail\zimbraMail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replication\zimbraRepl.cs" />
