--- a/ClubCloud.Zimbra.Client/ClubCloud.Zimbra.Client.csproj
+++ b/ClubCloud.Zimbra.Client/ClubCloud.Zimbra.Client.csproj
@@ -40,7 +40,8 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>ClubCloud.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -66,7 +67,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClubCloud.pfx" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
