--- a/ClubCloud.Zimbra/ClubCloud.Zimbra.csproj
+++ b/ClubCloud.Zimbra/ClubCloud.Zimbra.csproj
@@ -37,7 +37,8 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>ClubCloud.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -140,7 +141,6 @@
     <Content Include="wsdl\soap.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClubCloud.pfx" />
     <None Include="wsdl\zimbra.xsd">
       <SubType>Designer</SubType>
     </None>
