--- a/ClubCloud.Zimbra.Client/ClubCloud.Zimbra.Client.csproj
+++ b/ClubCloud.Zimbra.Client/ClubCloud.Zimbra.Client.csproj
@@ -40,8 +40,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>ClubCloud.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -67,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClubCloud.pfx" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
