Zimbra Role provider

--- a/ClubCloud.Zimbra/ClubCloud.Zimbra.csproj
+++ b/ClubCloud.Zimbra/ClubCloud.Zimbra.csproj
@@ -72,21 +72,29 @@
     <Compile Include="Administration\Extended\zimbraAdminExt.cs" />
     <Compile Include="Administration\GetAccountInfoRequest.cs" />
     <Compile Include="Administration\GetAccountInfoResponse.cs" />
+    <Compile Include="Administration\GetAccountMembershipRequest.cs" />
+    <Compile Include="Administration\GetAccountMembershipResponse.cs" />
     <Compile Include="Administration\GetAccountRequest.cs" />
     <Compile Include="Administration\GetAccountResponse.cs" />
+    <Compile Include="Administration\GetAllDistributionListsRequest.cs" />
+    <Compile Include="Administration\GetAllDistributionListsResponse.cs" />
     <Compile Include="Administration\GetAllDomainsRequest.cs" />
     <Compile Include="Administration\GetAllDomainsResponse.cs" />
     <Compile Include="Administration\GetCosRequest.cs" />
     <Compile Include="Administration\GetCosResponse.cs" />
+    <Compile Include="Administration\GetDistributionListRequest.cs" />
+    <Compile Include="Administration\GetDistributionListResponse.cs" />
     <Compile Include="Administration\GetDomainRequest.cs" />
-    <Compile Include="Administration\getDomainResponse.cs" />
+    <Compile Include="Administration\GetDomainResponse.cs" />
     <Compile Include="Administration\GetVersionInfoRequest.cs" />
     <Compile Include="Administration\GetVersionInfoResponse.cs" />
     <Compile Include="Administration\ModifyAccountRequest.cs" />
     <Compile Include="Administration\ModifyAccountResponse.cs" />
-    <Compile Include="Administration\modifyDomainRequest.cs" />
-    <Compile Include="Administration\modifyDomainResponse.cs" />
+    <Compile Include="Administration\ModifyDomainRequest.cs" />
+    <Compile Include="Administration\ModifyDomainResponse.cs" />
     <Compile Include="Administration\modifyUCServiceRequest.cs" />
+    <Compile Include="Administration\SearchDirectoryRequest.cs" />
+    <Compile Include="Administration\SearchDirectoryResponse.cs" />
     <Compile Include="Administration\updatePresenceSessionIdRequest.cs" />
     <Compile Include="Administration\zimbraAdmin.cs" />
     <Compile Include="Administration\zimbraAdminSoap.cs" />
@@ -112,9 +120,13 @@
     <Compile Include="Global\cosInfo.cs" />
     <Compile Include="Global\cosInfoAttr.cs" />
     <Compile Include="Global\cosSelector.cs" />
+    <Compile Include="Global\distributionListBy.cs" />
     <Compile Include="Global\distributionListInfo.cs" />
+    <Compile Include="Global\distributionListSelector.cs" />
     <Compile Include="Global\dlInfo.cs" />
+    <Compile Include="Global\domainBy.cs" />
     <Compile Include="Global\domainInfo.cs" />
+    <Compile Include="Global\domainSelector.cs" />
     <Compile Include="Global\granteeInfo.cs" />
     <Compile Include="Global\granteeType.cs" />
     <Compile Include="Global\infoSection.cs" />
