--- a/ClubCloud.Zimbra.Client/App.config
+++ b/ClubCloud.Zimbra.Client/App.config
@@ -1,6 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <sectionGroup name="Zimbra" >
+      <section name="Configuration" type="ClubCloud.Zimbra.Service.ZimbraConfigurationHandler,ClubCloud.Zimbra, Version=1.0.0.0, Culture=neutral, PublicKeyToken=144fd205e283172e" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <Zimbra>
+    <Configuration>
+      <Server Name="ClubCloud" ServerName="mail.clubcloud.nl" UserName="admin@clubcloud.nl" Password="rjm557308453!" IsAdmin="true" Encoded="false" ClassOfService="clubcloud"/>
+      <Binding MaxReceivedMessageSize="2147483647"/>
+    </Configuration>
+  </Zimbra>
 </configuration>
