--- a/ClubCloud.Claims/ClubCloud.Provider.csproj
+++ b/ClubCloud.Claims/ClubCloud.Provider.csproj
@@ -46,6 +46,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SharePoint.Security, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Web.Administration, Version=7.9.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Windows\System32\inetsrv\Microsoft.Web.Administration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Web.Management, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Windows\System32\inetsrv\Microsoft.Web.Management.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -61,9 +69,16 @@
     <Reference Include="Microsoft.SharePoint" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Features\Zimbra Claims\Zimbra Claims.EventReceiver.cs">
+      <DependentUpon>Zimbra Claims.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Features\Zimbra Provider\Zimbra Provider.EventReceiver.cs">
+      <DependentUpon>Zimbra Provider.feature</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZimbraClaimProvider.cs" />
     <Compile Include="ZimbraDiagnosticService.cs" />
+    <Compile Include="ZimbraConfiguration.cs" />
     <Compile Include="ZimbraMembershipProvider.cs" />
     <Compile Include="ZimbraMembershipUser.cs" />
     <Compile Include="ZimbraMembershipUserCollection.cs" />
@@ -75,6 +90,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClubCloud.pfx" />
+    <None Include="Features\Zimbra Claims\Zimbra Claims.feature">
+      <FeatureId>{ac3760a1-6a4c-464b-b22a-558fce9f9193}</FeatureId>
+    </None>
+    <None Include="Features\Zimbra Provider\Zimbra Provider.feature">
+      <FeatureId>{51918dfa-cf18-4d78-a092-98d7ef773613}</FeatureId>
+    </None>
     <None Include="Package\Package.package">
       <PackageId>{feeca0b7-26ac-459f-83de-82e1943f195c}</PackageId>
     </None>
@@ -88,8 +109,14 @@
       <Name>ClubCloud.Zimbra</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Features\" />
+    <Content Include="Features\Zimbra Claims\Zimbra Claims.Template.xml">
+      <DependentUpon>Zimbra Claims.feature</DependentUpon>
+    </Content>
+    <Content Include="Features\Zimbra Provider\Zimbra Provider.Template.xml">
+      <DependentUpon>Zimbra Provider.feature</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
