--- a/ClubCloud.Claims/ClubCloud.Provider.csproj
+++ b/ClubCloud.Claims/ClubCloud.Provider.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\..\..\Windows\System32\inetsrv\Microsoft.Web.Management.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -64,6 +65,8 @@
     <Reference Include="System.identitymodel.services" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.Web.DynamicData" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.SharePoint" />
@@ -76,6 +79,62 @@
       <DependentUpon>Zimbra Provider.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Webparts\Add User\Add User.ascx.cs">
+      <DependentUpon>Add User.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Add User\Add User.ascx.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Add User.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Approve User\Approve User.ascx.cs">
+      <DependentUpon>Approve User.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Approve User\Approve User.ascx.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Approve User.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Claim\Claim.ascx.cs">
+      <DependentUpon>Claim.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Claim\Claim.ascx.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Claim.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Login\Login.ascx.cs">
+      <DependentUpon>Login.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Login\Login.ascx.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Modify Password\Modify Password.ascx.cs">
+      <DependentUpon>Modify Password.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Modify Password\Modify Password.ascx.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modify Password.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Modify User\Modify User.ascx.cs">
+      <DependentUpon>Modify User.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Modify User\Modify User.ascx.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modify User.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Reset Password\Reset Password.ascx.cs">
+      <DependentUpon>Reset Password.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Webparts\Reset Password\Reset Password.ascx.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reset Password.ascx</DependentUpon>
+    </Compile>
     <Compile Include="ZimbraClaimProvider.cs" />
     <Compile Include="ZimbraDiagnosticService.cs" />
     <Compile Include="ZimbraConfiguration.cs" />
@@ -90,6 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClubCloud.pfx" />
+    <None Include="Features\Zimbra WebParts\Zimbra WebParts.feature">
+      <FeatureId>{91421599-20ff-4ccf-ba3a-5f7bb9c676d7}</FeatureId>
+    </None>
     <None Include="Features\Zimbra Claims\Zimbra Claims.feature">
       <FeatureId>{ac3760a1-6a4c-464b-b22a-558fce9f9193}</FeatureId>
     </None>
@@ -102,6 +164,34 @@
     <None Include="Package\Package.Template.xml">
       <DependentUpon>Package.package</DependentUpon>
     </None>
+    <None Include="Webparts\Add User\Add User.webpart" />
+    <None Include="Webparts\Add User\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{b30261b0-c2b8-44a8-8774-ebdb4241f559}</SharePointProjectItemId>
+    </None>
+    <None Include="Webparts\Approve User\Approve User.webpart" />
+    <None Include="Webparts\Approve User\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{6490ab05-7013-4495-8a07-21813c045864}</SharePointProjectItemId>
+    </None>
+    <None Include="Webparts\Claim\Claim.webpart" />
+    <None Include="Webparts\Claim\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{92b7bab3-a43c-41a2-8a6a-c26ca092c1ff}</SharePointProjectItemId>
+    </None>
+    <None Include="Webparts\Login\Login.webpart" />
+    <None Include="Webparts\Login\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{c3cf2f30-79d1-44be-ba95-c078509b5c1a}</SharePointProjectItemId>
+    </None>
+    <None Include="Webparts\Modify Password\Modify Password.webpart" />
+    <None Include="Webparts\Modify Password\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{74f7de16-b1d1-4a98-a3f2-75d17a3734cf}</SharePointProjectItemId>
+    </None>
+    <None Include="Webparts\Modify User\Modify User.webpart" />
+    <None Include="Webparts\Modify User\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{2024dca9-a25a-4d6c-8d4c-69186b69bd3b}</SharePointProjectItemId>
+    </None>
+    <None Include="Webparts\Reset Password\Reset Password.webpart" />
+    <None Include="Webparts\Reset Password\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{ba5a4acf-d13c-4278-8dca-d3af12a4bc1d}</SharePointProjectItemId>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClubCloud.Zimbra\ClubCloud.Zimbra.csproj">
@@ -111,11 +201,49 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Features\Zimbra WebParts\Zimbra WebParts.Template.xml">
+      <DependentUpon>Zimbra WebParts.feature</DependentUpon>
+    </Content>
     <Content Include="Features\Zimbra Claims\Zimbra Claims.Template.xml">
       <DependentUpon>Zimbra Claims.feature</DependentUpon>
     </Content>
     <Content Include="Features\Zimbra Provider\Zimbra Provider.Template.xml">
       <DependentUpon>Zimbra Provider.feature</DependentUpon>
+    </Content>
+    <Content Include="Webparts\Add User\Add User.ascx">
+      <Generator>SharePointWebPartCodeGenerator</Generator>
+      <LastGenOutput>Add User.ascx.g.cs</LastGenOutput>
+    </Content>
+    <Content Include="Webparts\Add User\Elements.xml" />
+    <Content Include="Webparts\Approve User\Approve User.ascx">
+      <Generator>SharePointWebPartCodeGenerator</Generator>
+      <LastGenOutput>Approve User.ascx.g.cs</LastGenOutput>
+    </Content>
+    <Content Include="Webparts\Approve User\Elements.xml" />
+    <Content Include="Webparts\Claim\Claim.ascx">
+      <Generator>SharePointWebPartCodeGenerator</Generator>
+      <LastGenOutput>Claim.ascx.g.cs</LastGenOutput>
+    </Content>
+    <Content Include="Webparts\Claim\Elements.xml" />
+    <Content Include="Webparts\Login\Elements.xml" />
+    <Content Include="Webparts\Login\Login.ascx">
+      <Generator>SharePointWebPartCodeGenerator</Generator>
+      <LastGenOutput>Login.ascx.g.cs</LastGenOutput>
+    </Content>
+    <Content Include="Webparts\Modify Password\Elements.xml" />
+    <Content Include="Webparts\Modify Password\Modify Password.ascx">
+      <Generator>SharePointWebPartCodeGenerator</Generator>
+      <LastGenOutput>Modify Password.ascx.g.cs</LastGenOutput>
+    </Content>
+    <Content Include="Webparts\Modify User\Elements.xml" />
+    <Content Include="Webparts\Modify User\Modify User.ascx">
+      <Generator>SharePointWebPartCodeGenerator</Generator>
+      <LastGenOutput>Modify User.ascx.g.cs</LastGenOutput>
+    </Content>
+    <Content Include="Webparts\Reset Password\Elements.xml" />
+    <Content Include="Webparts\Reset Password\Reset Password.ascx">
+      <Generator>SharePointWebPartCodeGenerator</Generator>
+      <LastGenOutput>Reset Password.ascx.g.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
