--- a/ClubCloud.Claims/ClubCloud.Provider.csproj
+++ b/ClubCloud.Claims/ClubCloud.Provider.csproj
@@ -197,6 +197,7 @@
     <ProjectReference Include="..\ClubCloud.Zimbra\ClubCloud.Zimbra.csproj">
       <Project>{04f1320b-7fd4-4429-985c-b3946ed2f519}</Project>
       <Name>ClubCloud.Zimbra</Name>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
