--- a/ClubCloud.Claims/ClubCloud.Provider.csproj
+++ b/ClubCloud.Claims/ClubCloud.Provider.csproj
@@ -45,6 +45,14 @@
     <AssemblyOriginatorKeyFile>ClubCloud.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.IdentityModel, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Program Files\Reference Assemblies\Microsoft\Windows Identity Foundation\v3.5\Microsoft.IdentityModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SharePoint.IdentityModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Windows\Microsoft.NET\assembly\GAC_MSIL\Microsoft.SharePoint.IdentityModel\v4.0_15.0.0.0__71e9bce111e9429c\Microsoft.SharePoint.IdentityModel.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.SharePoint.Security, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Web.Administration, Version=7.9.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -77,6 +85,17 @@
     </Compile>
     <Compile Include="Features\Zimbra Provider\Zimbra Provider.EventReceiver.cs">
       <DependentUpon>Zimbra Provider.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Features\Zimbra UserSettings\Zimbra UserSettings.EventReceiver.cs">
+      <DependentUpon>Zimbra UserSettings.feature</DependentUpon>
+    </Compile>
+    <Compile Include="IDENTITYMODEL\ZIMBRA\Authenticate.aspx.cs">
+      <DependentUpon>Authenticate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IDENTITYMODEL\ZIMBRA\default.aspx.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Webparts\Add_User\Add_User.ascx.cs">
@@ -135,9 +154,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reset_Password.ascx</DependentUpon>
     </Compile>
+    <Compile Include="ZimbraClaim.cs" />
     <Compile Include="ZimbraClaimProvider.cs" />
+    <Compile Include="ZimbraClaimsPrincipal.cs" />
     <Compile Include="ZimbraDiagnosticService.cs" />
     <Compile Include="ZimbraConfiguration.cs" />
+    <Compile Include="ZimbraFieldId.cs" />
     <Compile Include="ZimbraMembershipProvider.cs" />
     <Compile Include="ZimbraMembershipUser.cs" />
     <Compile Include="ZimbraMembershipUserCollection.cs" />
@@ -145,10 +167,15 @@
     <Compile Include="ZimbraProviderSettings.cs" />
     <Compile Include="ZimbraRoleProvider.cs" />
     <Compile Include="ZimbraModule.cs" />
+    <Compile Include="ZimbraSecurityEventReceiver.cs" />
     <Compile Include="ZimbraUserIdentity.cs" />
+    <Compile Include="ZimbraUserSettingsProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClubCloud.pfx" />
+    <None Include="Features\Zimbra UserSettings\Zimbra UserSettings.feature">
+      <FeatureId>{48f6970d-4eef-4245-b89f-3ee2a9c8bf9d}</FeatureId>
+    </None>
     <None Include="Features\Zimbra WebParts\Zimbra WebParts.feature">
       <FeatureId>{91421599-20ff-4ccf-ba3a-5f7bb9c676d7}</FeatureId>
     </None>
@@ -158,6 +185,10 @@
     <None Include="Features\Zimbra Provider\Zimbra Provider.feature">
       <FeatureId>{51918dfa-cf18-4d78-a092-98d7ef773613}</FeatureId>
     </None>
+    <None Include="IDENTITYMODEL\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{8056646a-74b2-4b0c-97b5-1525d272ab5f}</SharePointProjectItemId>
+    </None>
+    <None Include="IDENTITYMODEL\ZIMBRA\web.config" />
     <None Include="Package\Package.package">
       <PackageId>{feeca0b7-26ac-459f-83de-82e1943f195c}</PackageId>
     </None>
@@ -194,6 +225,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ClubCloud.KNLTB\ClubCloud.KNLTB.csproj">
+      <Project>{68cae0a5-9672-48de-8047-3904a4b840b1}</Project>
+      <Name>ClubCloud.KNLTB</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClubCloud.Zimbra\ClubCloud.Zimbra.csproj">
       <Project>{04f1320b-7fd4-4429-985c-b3946ed2f519}</Project>
       <Name>ClubCloud.Zimbra</Name>
@@ -202,6 +237,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Features\Zimbra UserSettings\Zimbra UserSettings.Template.xml">
+      <DependentUpon>Zimbra UserSettings.feature</DependentUpon>
+    </Content>
     <Content Include="Features\Zimbra WebParts\Zimbra WebParts.Template.xml">
       <DependentUpon>Zimbra WebParts.feature</DependentUpon>
     </Content>
@@ -211,6 +249,8 @@
     <Content Include="Features\Zimbra Provider\Zimbra Provider.Template.xml">
       <DependentUpon>Zimbra Provider.feature</DependentUpon>
     </Content>
+    <Content Include="IDENTITYMODEL\ZIMBRA\Authenticate.aspx" />
+    <Content Include="IDENTITYMODEL\ZIMBRA\default.aspx" />
     <Content Include="Webparts\Add_User\Add_User.ascx">
       <Generator>SharePointWebPartCodeGenerator</Generator>
       <LastGenOutput>Add_User.ascx.g.cs</LastGenOutput>
